--- a/SystemLotniczy/MainWindow.xaml
+++ b/SystemLotniczy/MainWindow.xaml
@@ -7,6 +7,59 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <TabControl>
+        <TabItem Header="Edit" IsSelected="True">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">Rezerwacja lotu</Label>
+                <DockPanel Grid.Row="1" Grid.Column="0">
+                    <Label Width="75" VerticalAlignment="Center">Imię:</Label>
+                    <TextBox x:Name="new_imie" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="1" Grid.Column="1">
+                    <Label Width="75" VerticalAlignment="Center">Nazwisko:</Label>
+                    <TextBox x:Name="new_nazwisko" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="1" Grid.Column="2">
+                    <Label Width="75" VerticalAlignment="Center">Wiek:</Label>
+                    <TextBox x:Name="new_wiek" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="2" Grid.Column="0">
+                    <Label Width="75" VerticalAlignment="Center">Adres:</Label>
+                    <TextBox x:Name="new_adres" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="2" Grid.Column="1">
+                    <Label Width="75" VerticalAlignment="Center">Nr.telefonu:</Label>
+                    <TextBox x:Name="new_nr_tel" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="2" Grid.Column="2">
+                    <Label Width="75" VerticalAlignment="Center">Email:</Label>
+                    <TextBox x:Name="new_email" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel Grid.Row="4" Grid.Column="0">
+                    <Label Width="75" VerticalAlignment="Center">Dokąd:</Label>
+                    <ComboBox x:Name="trasyCmbBox" Margin="3"></ComboBox>
+                </DockPanel>
+                <DockPanel Grid.Row="4" Grid.Column="1">
+                    <Label Width="75">Kiedy:</Label>
+                    <DatePicker x:Name="new_data_wylotu" Margin="3"></DatePicker>
+                </DockPanel>
+                <Button Click="DodajLot" Content="Zarezerwuj" Width="100" Height="30" Grid.Row="5" Grid.Column="1"/>
+            </Grid>
+        </TabItem>
         <TabItem Header="Klienci">
             <DataGrid x:Name="gridKlienci" AutoGenerateColumns="False">
                 <DataGrid.Columns>
@@ -30,8 +83,18 @@
         <TabItem Header="Loty">
             <DataGrid x:Name="gridLoty" AutoGenerateColumns="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Dokąd" Binding="{Binding miejsce_docelowe}"/>
+                    <DataGridTextColumn Header="Samolot" Binding="{Binding id_samolotu}"/>
+                    <DataGridTextColumn Header="Dokąd" Binding="{Binding id_trasy}"/>
                     <DataGridTextColumn Header="Data odlotu" Binding="{Binding data_odlotu, StringFormat=d}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </TabItem>
+        <TabItem Header="Rezerwacje">
+            <DataGrid x:Name="gridRezerwacje" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Klient" Binding="{Binding id_klienta}"/>
+                    <DataGridTextColumn Header="Lot" Binding="{Binding id_lotu}"/>
+                    <DataGridTextColumn Header="Cena" Binding="{Binding cena}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </TabItem>
